# math-expert

./: .gitignore  LICENSE  Makefile  README.md  doc.py  err.py  func.py  gui.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: linux-tests.yml  macos-tests.yml  tests.yml  win-tests.yml
pyuic5/: main.ui
qt5/: error.ui  main.ui  media.qrc
src/: func.py  gui.py  main.py  media_rc.py
src/mathexpert/: func.py  main.py
tests/: test_func.py
