# [pycodestyle]
# ignore = E501
[metadata]
name = math-expert
version = 0.2
author = SalahDin Ahmed
author_email = salatrod@gmail.com
description = Incomplete easy-to-use math solver and PDF generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salastro/math-expert/
project_urls =
    Bug Tracker = https://github.com/salastro/math-expert/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    mathexpert
install_requires =
    loguru
    numpy
    PyLaTeX
    sympy
python_requires = >=3.10

[options.packages.find]
where = src

[pylint.MASTER]
extension-pkg-whitelist=PyQt5
